// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InterventionStatusButtons /> Should render and match the snapshot 1`] = `<div />`;

exports[`<InterventionStatusButtons /> Should render and match the snapshot 2`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c1 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: rgba(140,189,0,1);
}

.c1 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <button
    class="c0 c1"
    color="primary"
    data-cy="publish-session-button"
    radius="100px"
  >
    Publish Intervention
  </button>
</div>
`;

exports[`<InterventionStatusButtons /> Should render and match the snapshot 3`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  border: 1px solid transparent;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

.c1 {
  font-weight: bold;
  width: 180px;
  margin: 5px;
  background-color: rgba(240,104,74,1);
}

.c1 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <button
    class="c0 c1"
    color="primary"
    radius="100px"
  >
    Close Intervention
  </button>
</div>
`;
